[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
http-body = "0.4"
futures = "0.3"
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
axum = { version = "0.6.6", features = ["default", "ws", "multipart"] }
axum-macros = "0.3.2" # for debug_handler
include_dir = "0.7"
postgres = "0.19"
openssl = "0.10"
postgres-openssl = "0.5"
dotenv = "0.15.0"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.7"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
